# diseaster

./: .env  .env.example  .gitignore  Cargo.toml  README.md
app/: pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/net/strobl/app/: MainActivity.kt
app/android/app/src/profile/: AndroidManifest.xml
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
migrations/: 20210416163502_all.sql
scripts/: departments.csv  departments.csv~  diseases.csv  doctors.py  upload.nim
services/: matcher.py  puppy.json
src/: config.rs  main.rs  models.rs
src/db/: chance.rs  department.rs  disease.rs  doctor.rs  mod.rs  symptom.rs
src/routes/: index.rs  mod.rs
src/routes/rest/: chance.rs  department.rs  disease.rs  doctor.rs  mod.rs  symptom.rs
src/routes/view/: mod.rs
templates/base/: default.html
