[package]
name = "diseaster"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.5"
actix-cors = "0.6.0-beta.1"
serde = { version = "1.0.115", features = ["derive"] }
listenfd = "0.3.3"
tera = "1.7.1"
anyhow = "1.0.40"
sqlx = { version = "0.5.1", features = ["runtime-actix-native-tls", "postgres", "macros", "json", "uuid", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.13"
chrono = "0.4.19"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
log = "0.4.14"
fern = "0.6.0"